// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component ThirdPartyLookupFormResult renders api data 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-test-form"
        id="standard-card-test-form"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-test-form-header"
              id="standard-card-test-form-header"
            >
              Test Form
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-test-form-content"
          data-testid="standard-card-test-form-content"
          id="standard-card-test-form-content"
        >
          <p>
            primary heading
             - 
            dummy UT
          </p>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-test-results"
            id="standard-card-test-results"
          >
            <div
              class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                  data-testid="standard-card-test-results-header"
                  id="standard-card-test-results-header"
                >
                  Test Results
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
              data-analyticsid="standard-card-test-results-content"
              data-testid="standard-card-test-results-content"
              id="standard-card-test-results-content"
            >
              <pre>
                [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
              </pre>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-argx73-MuiButtonBase-root-MuiButton-root"
            style="margin-top: 20px;"
            tabindex="0"
            type="button"
          >
            New Test Search
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupFormResult renders api data when no second field provided 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-label-9"
        id="standard-card-label-9"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-label-9-header"
              id="standard-card-label-9-header"
            >
              label 9
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-label-9-content"
          data-testid="standard-card-label-9-content"
          id="standard-card-label-9-content"
        >
          <p>
            pf heading 9
             - 
            dummy UT
          </p>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-test-results"
            id="standard-card-test-results"
          >
            <div
              class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                  data-testid="standard-card-test-results-header"
                  id="standard-card-test-results-header"
                >
                  Test Results
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
              data-analyticsid="standard-card-test-results-content"
              data-testid="standard-card-test-results-content"
              id="standard-card-test-results-content"
            >
              <pre>
                [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
              </pre>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-argx73-MuiButtonBase-root-MuiButton-root"
            style="margin-top: 20px;"
            tabindex="0"
            type="button"
          >
            New Test Search
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupFormResult should display a blank when the response is blank 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-test-form"
        id="standard-card-test-form"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-test-form-header"
              id="standard-card-test-form-header"
            >
              Test Form
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-test-form-content"
          data-testid="standard-card-test-form-content"
          id="standard-card-test-form-content"
        >
          <p>
            primary heading
             - 
            dummy UT
          </p>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-results"
            id="standard-card-results"
          >
            <div
              class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                  data-testid="standard-card-results-header"
                  id="standard-card-results-header"
                >
                  Results
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
              data-analyticsid="standard-card-results-content"
              data-testid="standard-card-results-content"
              id="standard-card-results-content"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
              >
                <div
                  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
                  data-testid="standard-card"
                  id="standard-card"
                >
                  <div
                    class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
                  >
                    <div
                      class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                    />
                  </div>
                  <div
                    class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                    data-analyticsid="standard-card-content"
                    data-testid="standard-card-content"
                    id="standard-card-content"
                  >
                    No results found
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-argx73-MuiButtonBase-root-MuiButton-root"
            style="margin-top: 20px;"
            tabindex="0"
            type="button"
          >
            New Search
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupFormResult should display the secondary field when required 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-label-10"
        id="standard-card-label-10"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-label-10-header"
              id="standard-card-label-10-header"
            >
              label 10
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-label-10-content"
          data-testid="standard-card-label-10-content"
          id="standard-card-label-10-content"
        >
          <p>
            pf heading 10
             - 
            dummy UT
          </p>
          <p>
            sf heading 10
             - 
            123456789
          </p>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-test-results"
            id="standard-card-test-results"
          >
            <div
              class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                  data-testid="standard-card-test-results-header"
                  id="standard-card-test-results-header"
                >
                  Test Results
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
              data-analyticsid="standard-card-test-results-content"
              data-testid="standard-card-test-results-content"
              id="standard-card-test-results-content"
            >
              <pre>
                [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
              </pre>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-argx73-MuiButtonBase-root-MuiButton-root"
            style="margin-top: 20px;"
            tabindex="0"
            type="button"
          >
            New Test Search
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupFormResult should not display the secondary field if reportInOutput is not specifically turned on 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-label-8"
        id="standard-card-label-8"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-label-8-header"
              id="standard-card-label-8-header"
            >
              label 8
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-label-8-content"
          data-testid="standard-card-label-8-content"
          id="standard-card-label-8-content"
        >
          <p>
            PF 8
             - 
            dummy UT
          </p>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-test-results"
            id="standard-card-test-results"
          >
            <div
              class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                  data-testid="standard-card-test-results-header"
                  id="standard-card-test-results-header"
                >
                  Test Results
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
              data-analyticsid="standard-card-test-results-content"
              data-testid="standard-card-test-results-content"
              id="standard-card-test-results-content"
            >
              <pre>
                [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
              </pre>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-argx73-MuiButtonBase-root-MuiButton-root"
            style="margin-top: 20px;"
            tabindex="0"
            type="button"
          >
            New Test Search
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupFormResult should show locale-defined message when no results 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-test-form"
        id="standard-card-test-form"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-test-form-header"
              id="standard-card-test-form-header"
            >
              Test Form
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-test-form-content"
          data-testid="standard-card-test-form-content"
          id="standard-card-test-form-content"
        >
          <p>
            primary heading
             - 
            dummy UT
          </p>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-test-results"
            id="standard-card-test-results"
          >
            <div
              class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                  data-testid="standard-card-test-results-header"
                  id="standard-card-test-results-header"
                >
                  Test Results
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
              data-analyticsid="standard-card-test-results-content"
              data-testid="standard-card-test-results-content"
              id="standard-card-test-results-content"
            >
              <div
                class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
              >
                <div
                  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
                  data-testid="standard-card"
                  id="standard-card"
                >
                  <div
                    class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
                  >
                    <div
                      class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                    />
                  </div>
                  <div
                    class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
                    data-analyticsid="standard-card-content"
                    data-testid="standard-card-content"
                    id="standard-card-content"
                  >
                    No test results found
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-argx73-MuiButtonBase-root-MuiButton-root"
            style="margin-top: 20px;"
            tabindex="0"
            type="button"
          >
            New Test Search
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component ThirdPartyLookupFormResult should use defaults when locale values are not provided 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-1idn90j-MuiGrid-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-test-form"
        id="standard-card-test-form"
      >
        <div
          class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
              data-testid="standard-card-test-form-header"
              id="standard-card-test-form-header"
            >
              Test Form
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
          data-analyticsid="standard-card-test-form-content"
          data-testid="standard-card-test-form-content"
          id="standard-card-test-form-content"
        >
          <p>
            primary heading
             - 
            dummy UT
          </p>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-985319-MuiPaper-root-MuiCard-root"
            data-testid="standard-card-results"
            id="standard-card-results"
          >
            <div
              class="MuiCardHeader-root css-16c6n48-MuiCardHeader-root"
            >
              <div
                class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
              >
                <h3
                  class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1hzv55z-MuiTypography-root"
                  data-testid="standard-card-results-header"
                  id="standard-card-results-header"
                >
                  Results
                </h3>
              </div>
            </div>
            <div
              class="MuiCardContent-root css-46bh2p-MuiCardContent-root"
              data-analyticsid="standard-card-results-content"
              data-testid="standard-card-results-content"
              id="standard-card-results-content"
            >
              <pre>
                [
  {
    "IS_INTERNATIONAL_COLLAB": "0"
  }
]
              </pre>
            </div>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium css-argx73-MuiButtonBase-root-MuiButton-root"
            style="margin-top: 20px;"
            tabindex="0"
            type="button"
          >
            New Search
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
